--- a/SuperNote/Base.lproj/Main.storyboard
+++ b/SuperNote/Base.lproj/Main.storyboard
@@ -111,6 +111,9 @@
                                     <action selector="updateNotesWithContentsOfTextView:" destination="tB1-Ub-wE6" eventType="touchUpInside" id="hhm-pW-0dF"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iconForImageView" translatesAutoresizingMaskIntoConstraints="NO" id="2Sv-ru-2TI">
+                                <rect key="frame" x="313" y="458" width="143" height="108"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -148,4 +151,7 @@
             <point key="canvasLocation" x="211" y="279"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="iconForImageView" width="76" height="76"/>
+    </resources>
 </document>
