--- a/SuperNote/Base.lproj/LaunchScreen.storyboard
+++ b/SuperNote/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,20 +18,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SuperNote" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k48-4S-XGq">
-                                <rect key="frame" x="254" y="46" width="260" height="73"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Justin Lazarski" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0A-Ge-o3I">
+                                <rect key="frame" x="301" y="501" width="167" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Justin Lazarski" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0A-Ge-o3I">
-                                <rect key="frame" x="301" y="127" width="167" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="SuperNote" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k48-4S-XGq">
+                                <rect key="frame" x="254" y="420" width="260" height="73"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                 <color key="textColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Y0A-Ge-o3I" firstAttribute="top" secondItem="k48-4S-XGq" secondAttribute="bottom" constant="8" id="BLA-gG-3RB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="k48-4S-XGq" secondAttribute="trailing" constant="234" id="Dwv-Yu-9pb"/>
+                            <constraint firstItem="Y0A-Ge-o3I" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cL2-wx-wJr"/>
+                            <constraint firstItem="k48-4S-XGq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cdU-Xe-Beo"/>
+                            <constraint firstItem="Y0A-Ge-o3I" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="orb-VX-5Id"/>
+                            <constraint firstItem="k48-4S-XGq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="234" id="sw9-Jj-PmC"/>
+                            <constraint firstItem="Y0A-Ge-o3I" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="281" id="vXv-j1-ZDq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Y0A-Ge-o3I" secondAttribute="trailing" constant="280" id="ynb-p3-Dks"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                 </viewController>
